fix nav visible through footer; tweak to h5 spacing

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -190,3 +190,12 @@ h4 {
   //font-size: 16px; // default
   font-size: 18px;
 }
+h5 {
+  margin-bottom: 0em;
+  font-size: 14px;
+}
+
+footer {
+  z-index: 10;
+  background-color: white;
+}
